--- a/style/index.css
+++ b/style/index.css
@@ -48,7 +48,95 @@ table {
 	border-spacing: 0;
 }
 
-"editor.codeActionsOnSave": {
-  "source.fixAll": true
+
+html {
+  box-sizing: border-box;
+  font-size: 62.5%;
+  
 }
 
+.page-top {
+  display: flex;
+  flex-flow: row wrap;
+  border: 1px hidden;
+  height: 100px;
+}
+
+.page-top h1 {
+  font-size: 3rem;
+  justify-self: flex-start;
+  border: 1px hidden;
+}
+
+.page-top .nav-bar {
+  justify-self: flex-end;
+  font-size: 2rem;
+  width: 300px;
+  border: 1px hidden;
+
+}
+
+nav a {
+  border: 1px solid black;
+  padding: 1%;
+}
+
+.header-nav {
+  display: flex;
+  align-items: center;
+  justify-content: middle;
+  border: 1px solid black;
+  width: 90%;
+  height: 300px;
+  flex-flow: column nowrap;
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 5%;
+}
+
+h2 {
+  font-size: 8rem;
+  border: 1px;
+}
+
+.header-nav h2 {
+  margin-left: auto;
+  margin-right: auto;
+
+}
+
+.header-nav button {
+  border: 1px solid back;
+  margin-left: auto;
+  margin-right: auto;
+  
+}
+
+.projects-container {
+  display: flex;
+  flex-wrap: wrap;
+  /* justify-content: space-evenly; */
+  justify-content: space-around;
+}
+
+
+
+
+footer {
+  width: 100%;
+  height: 100px;
+  background-color: peachpuff;
+  border: 5px white solid;
+  display: flex;
+  justify-content: middle;
+  align-items: center;
+}
+.contact-me {
+  margin-left: auto;
+  margin-right: auto;
+  border: 1px solid black;
+  
+  
+  width: 10%;
+  height: 20%;
+}
