--- a/style/index.css
+++ b/style/index.css
@@ -52,6 +52,7 @@ table {
 html {
   box-sizing: border-box;
   font-size: 62.5%;
+  font-family: cursive;
   
 }
 
@@ -59,32 +60,33 @@ html {
   display: flex;
   flex-flow: row wrap;
   border: 1px hidden;
-  height: 100px;
+  width: 90%;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+  margin: 2% auto;
 }
 
-.page-top h1 {
-  font-size: 3rem;
-  justify-self: flex-start;
-  border: 1px hidden;
+.top-name {
+  font-size: 4rem;
+  
 }
 
-.page-top .nav-bar {
-  justify-self: flex-end;
+.nav-bar {
+  display: flex;
   font-size: 2rem;
-  width: 300px;
-  border: 1px hidden;
-
 }
 
 nav a {
   border: 1px solid black;
-  padding: 1%;
+  padding: 2.5%;
+  margin: .25%;
 }
 
 .header-nav {
   display: flex;
   align-items: center;
-  justify-content: middle;
+  justify-content: center;
   border: 1px solid black;
   width: 90%;
   height: 300px;
@@ -92,6 +94,7 @@ nav a {
   margin-left: auto;
   margin-right: auto;
   margin-bottom: 5%;
+  background: peachpuff;
 }
 
 h2 {
@@ -100,15 +103,13 @@ h2 {
 }
 
 .header-nav h2 {
-  margin-left: auto;
-  margin-right: auto;
-
+  margin: 1% auto;
 }
 
 .header-nav button {
   border: 1px solid back;
-  margin-left: auto;
-  margin-right: auto;
+  margin: 1% auto;
+  padding: .5%;
   
 }
 
@@ -119,24 +120,29 @@ h2 {
   justify-content: space-around;
 }
 
+.flex-images {
+  display: flex;
+  flex-direction: column;
+}
 
-
+h3 {
+  text-align: center;
+  font-size: 2rem;
+  padding: 2%;
+}
 
 footer {
   width: 100%;
-  height: 100px;
+  height: 10rem;
   background-color: peachpuff;
   border: 5px white solid;
   display: flex;
-  justify-content: middle;
+  justify-content: center;
   align-items: center;
 }
-.contact-me {
-  margin-left: auto;
-  margin-right: auto;
+footer button {
+  margin: 0 auto;
   border: 1px solid black;
+  padding: .5rem;
   
-  
-  width: 10%;
-  height: 20%;
 }
