Started one media querie on header-nav.

--- a/style/index.css
+++ b/style/index.css
@@ -147,3 +147,10 @@ footer button {
   padding: .5rem;
   
 }
+
+@media (max-width: 800px){
+  .header-nav {
+    width: 60%;
+    margin: 0 auto;
+  }
+}
