--- a/style/index.css
+++ b/style/index.css
@@ -75,12 +75,15 @@ html {
 .nav-bar {
   display: flex;
   font-size: 2rem;
+  margin-right: 50px;
 }
 
 nav a {
   border: 1px solid black;
   padding: 2.5%;
   margin: .25%;
+  text-decoration: none;
+  color: black;
 }
 
 .header-nav {
@@ -107,10 +110,16 @@ h2 {
 }
 
 .header-nav button {
-  border: 1px solid back;
+  border: 1px solid black;
   margin: 1% auto;
   padding: .5%;
-  
+}
+
+button a {
+  text-decoration: none;
+  color: black;
+  font-family: cursive;
+  font-size: 2rem;
 }
 
 .projects-container {
@@ -118,6 +127,7 @@ h2 {
   flex-wrap: wrap;
   /* justify-content: space-evenly; */
   justify-content: space-around;
+  height: auto;
 }
 
 .flex-images {
@@ -129,6 +139,7 @@ h3 {
   text-align: center;
   font-size: 2rem;
   padding: 2%;
+  align-items: center;
 }
 
 footer {
@@ -149,8 +160,104 @@ footer button {
 }
 
 @media (max-width: 800px){
+  .top-name {
+    font-size: 3rem;
+  }
+
+  nav a {
+    font-size: 2rem;
+  }
+
   .header-nav {
-    width: 60%;
+    width: 90%;
     margin: 0 auto;
+  }
+
+  .flex-images {
+      padding: 5px;
+  }
+
+  .flex-images img {
+    width: 260px;
+  }
+
+  .projects-container {
+    margin: 20px 0;
+    flex-flow: row wrap;
+    border: 1px hidden;
+  }
+
+  h3 {
+    font-size: 1.4rem;
+    width: 65%;
+    text-align: center;
+    margin: 0 auto;
+  }
+}
+
+@media (max-width: 500px){
+  .page-top {
+    flex-direction: column;
+  }
+
+  .top-name {
+    font-size: 6rem;
+  }
+
+  .nav-bar {
+    flex-direction: column;
+    margin: 10px 10px;
+  }
+
+  .nav-bar a {
+    padding: 8px 48px;
+    text-align: center;
+    font-size: 2.4rem;
+    background: lightblue;
+  }
+  .header-nav {
+    height: 200px; 
+  }
+
+  .header-nav h2 {
+    font-size: 4rem;
+  }
+
+  .header-nav button {
+    padding: 8px 24px;
+    text-align: center;
+    background: lightblue;
+  }
+
+  .projects-container {
+    justify-content: space-evenly;
+    flex-flow: row wrap;
+  }
+
+  .flex-images img {
+    width: 200px;
+  }
+
+  h3 {
+    /* width: 50%; */
+    font-size: 1rem;
+  }
+
+  footer {
+    border: none;
+  }
+
+  footer button {
+    padding: 8px 24px;
+    text-align: center;
+    background: lightblue;
+  }
+  
+  .linkedin-nav {
+    display: none;
+  }
+
+  .twitter-nav {
+    display: none;
   }
 }
